<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white_black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        >

        <ImageView
            android:id="@+id/imageViewEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/edit_profile"
            app:srcCompat="@drawable/ic_baseline_logout_24"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/textViewLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/logout"
            android:layout_weight="3"
            android:textColor="@color/black_white"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            />

        <ImageView
            android:id="@+id/imageViewArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:contentDescription="@string/arrow"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>