<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".presentation.screens.mainFragment.MainFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <TextView
                android:id="@+id/textViewNowShowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/now_showing"
                android:textColor="@color/now_showing_films"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/recyclerviewNowShowing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSeeMoreNowShowing"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/see_more"
                android:textColor="@color/grey"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:background="@drawable/button_see_more"
                app:layout_constraintBottom_toTopOf="@+id/recyclerviewNowShowing"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewNowShowing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNowShowing"
                tools:listitem="@layout/now_showing_item_list">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textViewPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/popular_movies"
                android:textColor="@color/now_showing_films"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/recyclerviewPopular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerviewNowShowing" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSeeMorePopularMovies"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/see_more"
                android:textColor="@color/grey"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_see_more"
                app:layout_constraintBottom_toTopOf="@+id/recyclerviewPopular"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toBottomOf="@id/recyclerviewNowShowing"  />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPopular"
                tools:listitem="@layout/popular_item_list">


            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textViewPopularTvShows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/popular_tv_shows"
                android:textColor="@color/now_showing_films"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@id/recyclerviewPopularTvShows"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerviewPopular" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSeeMorePopularTvShows"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/see_more"
                android:textColor="@color/grey"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_see_more"
                app:layout_constraintBottom_toTopOf="@id/recyclerviewPopularTvShows"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerviewPopular"  />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewPopularTvShows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPopularTvShows"
                tools:listitem="@layout/popular_tv_show_item_list">


            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>




</layout>